2014-01-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (libhid): Turn from AC_TRY_RUN into
	AC_TRY_COMPILE, so it also works for cross-compilation
	setups.

2014-01-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* dfu.c (dfu_init): Move the descriptor checks up into the
	FLIP protocol implementation.
	* flip2.c (flip2_initialize): (Dito.)
	* flip1.c (flip1_initialize): (Dito.)

2014-01-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* flip2.c: Rename from flip.c
	* flip2.h: Rename from flip.h
	* Makefile.am: Reflect the renaming.
	* dfu.c: Update information how to get GPL.
	* dfu.h: (Dito.)

2014-01-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* flip.c (flip2_initialize): Check user is running on an Xmega
	device.

2014-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* flip.c: Added some verbose-level messages (-vv)
	* dfu.c: Added some verbose-level messages (-vvvv)

2014-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Kirill Levchenko:
	patch #7896: DFU FLIPv2 programming support
	* pgm_type.c: Add the flip2 programmer type.
	* config_gram.y: Allow for the usbid keyword in a device definition.
	* avrdude.conf.in: Add usbpid values to those Xmega devices where
	applicable.
	* avrpart.h: Add usbpid device field.
	* dfu.c: (New file.)
	* dfu.h: (New file.)
	* flip.c: (New file.)
	* flip.h: (New file.)
	* Makefile.am: Add new files.
	* doc/avrdude.texi: Document the changes.
	* avrdude.1: (Dito.)

2014-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* ChangeLog-2013: Annual changelog rotation.